# multi-llm-doc-assistant

./: .gitignore  README.md  package.json
backend/: .gitignore  package.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app.egg-info/: SOURCES.txt
backend/app/models/: llm.py
backend/app/providers/: __init__.py  base.py  factory.py  openai_provider.py
backend/tests/: conftest.py  test_models.py  test_providers.py  test_simple.py
backend_deprecated/: package.json
frontend/: package.json
